// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load plugins Load plugins for a site 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "createResolvers",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "prod-404-500",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "bundle-optimisations",
    "nodeAPIs": Array [
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "functions",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/prod-404-500/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/bundle-optimisations/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/functions/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-typescript",
    "nodeAPIs": Array [
      "pluginOptionsSchema",
      "resolvableExtensions",
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "allExtensions": false,
      "isTSX": false,
      "jsxPragma": "React",
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "resolvedCompiledGatsbyNode": undefined,
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [
      "onInitialClientRender",
    ],
    "id": "",
    "name": "partytown",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
      "createPages",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [
      "onRenderBody",
    ],
    "version": "1.0.0",
  },
]
`;

exports[`Load plugins Loads plugins defined with an object but without an options key 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "createResolvers",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "prod-404-500",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "bundle-optimisations",
    "nodeAPIs": Array [
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "functions",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "TEST",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/prod-404-500/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/bundle-optimisations/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/functions/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "__TEST__/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-typescript",
    "nodeAPIs": Array [
      "pluginOptionsSchema",
      "resolvableExtensions",
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "allExtensions": false,
      "isTSX": false,
      "jsxPragma": "React",
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "resolvedCompiledGatsbyNode": undefined,
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [
      "onInitialClientRender",
    ],
    "id": "",
    "name": "partytown",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
      "createPages",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [
      "onRenderBody",
    ],
    "version": "1.0.0",
  },
]
`;

exports[`Load plugins Overrides the options for gatsby-plugin-page-creator 1`] = `
Array [
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "createResolvers",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "prod-404-500",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "bundle-optimisations",
    "nodeAPIs": Array [
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "functions",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "ignore": Array [
        "___Test___.(js|ts)?(x)",
      ],
      "path": "<PROJECT_ROOT>/packages/gatsby/src/bootstrap/load-plugins/__tests__/src/pages",
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/prod-404-500/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/bundle-optimisations/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby/src/internal-plugins/functions/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "<PROJECT_ROOT>/packages/gatsby-plugin-page-creator/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-typescript",
    "nodeAPIs": Array [
      "pluginOptionsSchema",
      "resolvableExtensions",
      "onCreateBabelConfig",
      "onCreateWebpackConfig",
    ],
    "pluginOptions": Object {
      "allExtensions": false,
      "isTSX": false,
      "jsxPragma": "React",
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "name": "default-site-plugin",
    "nodeAPIs": Array [],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "resolvedCompiledGatsbyNode": undefined,
    "ssrAPIs": Array [],
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [],
    "id": "",
    "module": undefined,
    "modulePath": undefined,
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPages",
      "createPagesStatefully",
      "onPluginInit",
      "setFieldsOnGraphQLNodeType",
    ],
    "pluginOptions": Object {
      "path": "/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [],
    "subPluginPaths": undefined,
    "version": "1.0.0",
  },
  Object {
    "browserAPIs": Array [
      "onInitialClientRender",
    ],
    "id": "",
    "name": "partytown",
    "nodeAPIs": Array [
      "onCreateDevServer",
      "onPreBootstrap",
      "createPages",
    ],
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "",
    "ssrAPIs": Array [
      "onRenderBody",
    ],
    "version": "1.0.0",
  },
]
`;

exports[`Load plugins Throws an error when a plugin is defined with an option key 1`] = `"Plugin \\"___TEST___\\" has an \\"option\\" key in the configuration. Did you mean \\"options\\"?"`;
